--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Teste login</title>
+    <link rel="shortcut icon" href="./lock.png" type="image/x-icon">
+    <title>login</title>
 </head>
 <body>
 
