--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="shortcut icon" href="./lock.png" type="image/x-icon">
     <title>login</title>
 </head>
+
 <body>
 
     <div id="container-login" class="container">
@@ -32,12 +34,20 @@
 
     <div class="screen-logged">
 
-        <h2 id="logged-message"></h2>
+        <div>
 
-        <iframe id="iframe" src=""></iframe>
+            <h2 id="logged-message"></h2>
+
+            <iframe id="iframe" src=""></iframe>
+
+        </div>
+
 
     </div>
 
-<script src="./script.js"></script>
+    </div>
+
+    <script src="./script.js"></script>
 </body>
+
 </html>
