--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <h2 id="logged-message"></h2>
 
-            <iframe id="iframe" src=""></iframe>
+            <iframe id="iframe" src="" width="600" height="400"></iframe></iframe>
 
         </div>
 
