--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
     <div id="container-login" class="container">
 
+        
+
         <form id="loginForm" class="form">
+            <img class="logo" src="./header.png" alt="">
 
             <label for="username">Usuário</label>
 
@@ -36,7 +39,16 @@
 
         <div>
 
-            <h2 id="logged-message"></h2>
+            <div class="msg">
+
+                <img src="./header.png" alt="">
+
+                <h2 id="logged-message"></h2>
+
+                <button onclick="Exit()">sair</button>
+
+            </div>
+
 
             <iframe id="iframe" src="" width="600" height="400"></iframe></iframe>
 
