--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 <h2 id="logged-message"></h2>
 
-                <button onclick="Exit()">sair</button>
+                <button class="exit-btn" onclick="Exit()">sair</button>
 
             </div>
 
