--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./lock.png" type="image/x-icon">
-    <title>login</title>
+    <title>BARR3TO ERP SOFTWARE</title>
 </head>
 
 <body>
