--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./lock.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./header.png" type="image/x-icon">
     <title>BARR3TO ERP SOFTWARE</title>
 </head>
 
