--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
 
 
-            <iframe id="iframe" src="" width="600" height="400"></iframe></iframe>
+            <iframe id="iframe" src="" width="600" height="400"></iframe>
 
         </div>
 
