--- a/financeiro.html
+++ b/financeiro.html
@@ -9,9 +9,9 @@
     <title>BARR3TO SOLUÇÕES</title>
 </head>
 
-<body>
+<body style="height: 100vh; overflow: hidden;">
 
-    <iframe id="iframe" src="https://app.powerbi.com/view?r=eyJrIjoiODE4ZWM0N2EtZDA1ZC00OTVmLTgwMjctMWZmYzVmN2QwOTE5IiwidCI6IjE4Njc3OGFjLWJjNjMtNGE0My1iMmVlLThiMTk0MWVjYTRhOSJ9" height="1000" width="400"></iframe>
+    <iframe id="iframe" src="https://app.powerbi.com/view?r=eyJrIjoiODE4ZWM0N2EtZDA1ZC00OTVmLTgwMjctMWZmYzVmN2QwOTE5IiwidCI6IjE4Njc3OGFjLWJjNjMtNGE0My1iMmVlLThiMTk0MWVjYTRhOSJ9" height="1000" width="400" style="height: 101vh;"></iframe>
 
 
 </body>
