--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <form id="loginForm" class="form">
             
-            <img class="logo" src="./header.png" alt="">
+            <img class="logo" src="./logo-login.png" alt="">
 
             <div class="campos">
 
