--- a/dashboard-webstore.html
+++ b/dashboard-webstore.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <iframe id="iframe" src="https://app.powerbi.com/view?r=eyJrIjoiMmJiNDhkYWQtNWEzZS00YjQxLTkxNzctYWZiOWZlYWFjZTUyIiwidCI6IjE4Njc3OGFjLWJjNjMtNGE0My1iMmVlLThiMTk0MWVjYTRhOSJ9"></iframe>
+    <iframe id="iframe" src="https://app.powerbi.com/view?r=eyJrIjoiMmJiNDhkYWQtNWEzZS00YjQxLTkxNzctYWZiOWZlYWFjZTUyIiwidCI6IjE4Njc3OGFjLWJjNjMtNGE0My1iMmVlLThiMTk0MWVjYTRhOSJ9" style="height: 110vh"></iframe>
 
 
 </body>
