--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
 
     <header>
 
-        <img class="logo" src="./img/logo.png">
+        <div class="logo">
+
+            <img src="./img/logo.png">
+
+        </div>
 
         <nav class="navbar">
 
             <a href="#inicio">Início</a>
             <a href="#servicos">Serviços</a>
             <a href="#vantagens">Vantagens</a>
+            <a href="#vantagens">Contatos</a>
 
         </nav>
 
@@ -30,56 +35,72 @@
     </header>
 
     <section id="inicio" class="hero">
+
         <div class="container">
+
             <div class="hero-content">
+
                 <h2>Na Barreto Soluções, transformamos dados em decisões e tecnologia em vantagem competitiva.</h2>
                 <p>Somos especialistas em consultoria de Business Intelligence e soluções tecnológicas personalizadas,
                     ajudando empresas a alcançar seus objetivos com eficiência e inovação.</p>
-                <a href="#contato" class="btn-primary">Solicitar Consultoria</a>
+                <a href="https://wa.me/5516988134637" class="btn-primary">Solicitar Consultoria</a>
+
             </div>
+
             <div class="hero-image">
+
                 <img src="./img/home-img.png" alt="Laptop com gráficos">
             </div>
+
         </div>
+
     </section>
 
-    <section id="servicos" class="services">
 
-        <h2>Nossos Serviços</h2>
+    <section class="container" id="servicos">
 
-        <div class="service-cards">
+        <div class="container2">
 
-            <div class="card">
-                <h3>Inteligência Artificial</h3>
-                <p>Automatização de processos com IA para aumentar produtividade.</p>
+            <h2>Nossos Serviços</h2>
+
+
+            <div class="service-cards">
+
+                <div class="card">
+                    <h3>Inteligência Artificial</h3>
+                    <p>Automatização de processos com IA para aumentar produtividade.</p>
+                </div>
+
+                <div class="card">
+                    <h3>Análise de Dados</h3>
+                    <p>Insights precisos para decisões estratégicas baseadas em dados.</p>
+                </div>
+
+                <div class="card">
+                    <h3>Automação e RPA</h3>
+                    <p>Implementação de ferramentas para simplificar operações.</p>
+                </div>
+
+                <div class="card">
+                    <h3>Big Data</h3>
+                    <p>Processamento e análise de grandes volumes de dados.</p>
+                </div>
+
+                <div class="card">
+                    <h3>Visualização</h3>
+                    <p>Dashboards e relatórios visuais para monitoramento eficiente.</p>
+                </div>
+
+                <div class="card">
+                    <h3>WebApps</h3>
+                    <p>Sistemas personalizados para atender suas necessidades.</p>
+                </div>
+
             </div>
 
-            <div class="card">
-                <h3>Análise de Dados</h3>
-                <p>Insights precisos para decisões estratégicas baseadas em dados.</p>
-            </div>
-
-            <div class="card">
-                <h3>Automação e Mobilidade</h3>
-                <p>Implementação de ferramentas para simplificar operações.</p>
-            </div>
-
-            <div class="card">
-                <h3>Big Data</h3>
-                <p>Processamento e análise de grandes volumes de dados.</p>
-            </div>
-
-            <div class="card">
-                <h3>Visualização de Dados</h3>
-                <p>Dashboards e relatórios visuais para monitoramento eficiente.</p>
-            </div>
-
-            <div class="card">
-                <h3>Desenvolvimento de Soluções</h3>
-                <p>Sistemas personalizados para atender suas necessidades.</p>
-            </div>
 
         </div>
+
 
     </section>
 
@@ -90,6 +111,7 @@
 
 
     </footer>
+
 </body>
 
 </html>
