--- a/index.html
+++ b/index.html
@@ -105,6 +105,28 @@
     </section>
 
 
+
+    <section class="container" id="vantagens">
+
+
+        <div class="container2">
+
+            <h2>Vantagens</h2>
+
+            <div class="hero-content">
+
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br>
+                    Rerum quis beatae pariatur cum eligendi, recusandae animi natus deserunt<br>
+                    vero cupiditate laboriosam veritatis vel vitae libero!<br>
+                    Blanditiis incidunt porro error magnam!</p>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
     <footer class="footer">
 
         <p>&copy; 2025 Barreto Soluções. Todos os direitos reservados.</p>
