updated login btn

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 
         </nav>
 
-
-        <button class="btn"><a href="./pages/login.html">Login</a></button>
-
+        <a href="./pages/login.html" class="btn">Login</a>
 
     </header>
 
