--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="container2">
 
-            <h2>Nossos Serviços</h2>
+            <h2><span>Nossos </span>Serviços</h2>
 
 
             <div class="service-cards">
@@ -109,7 +109,7 @@
 
         <div class="container2">
 
-            <h2>Vantagens</h2>
+            <h2><span>Nossos </span>Vantagens</h2>
 
             <div class="hero-content">
 
