--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <div class="hero-image">
 
-                <img src="./img/home-img.png" alt="Laptop com gráficos">
+                <img src="./img/home-img1.png" alt="Laptop com gráficos">
             </div>
 
         </div>
