--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <a href="#inicio">Início</a>
             <a href="#servicos">Serviços</a>
-            <a href="#vantagens">Vantagens</a>
+            <a href="#vantagens">Aplicações</a>
             <a href="#vantagens">Contatos</a>
 
         </nav>
@@ -38,10 +38,12 @@
 
             <div class="hero-content">
 
-                <h2>Na Barreto Soluções, transformamos dados em decisões e tecnologia em vantagem competitiva.</h2>
-                <p>Somos especialistas em consultoria de Business Intelligence e soluções tecnológicas personalizadas,
-                    ajudando empresas a alcançar seus objetivos com eficiência e inovação.</p>
-                <a href="https://wa.me/5516988134637" class="btn-primary">Solicitar Consultoria</a>
+                <h2>Na Barreto Soluções, transformamos<br>
+                <span>Dados</span> em decisões e<br>
+                <span>Tecnologia</span> em<br>
+                Vantagem Competitiva.</h2>
+
+                <a href="https://wa.me/5516988134637" class="btn-primary" target="_blank">Solicitar Consultoria</a>
 
             </div>
 
@@ -103,34 +105,120 @@
     </section>
 
 
+    <section class="vantagens">
 
-    <section class="container" id="vantagens">
+        <h2 id="vantagens"><span>Nossas </span>Aplicações</h2>
 
+        <div class="container-vantagens">
 
-        <div class="container2">
+            <div class="div1">
 
-            <h2><span>Nossos </span>Vantagens</h2>
+                <img src="./img/estoque3d.png" alt="">
 
-            <div class="hero-content">
-
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.<br>
-                    Rerum quis beatae pariatur cum eligendi, recusandae animi natus deserunt<br>
-                    vero cupiditate laboriosam veritatis vel vitae libero!<br>
-                    Blanditiis incidunt porro error magnam!</p>
 
             </div>
+
+            <div class="div2">
+
+                <p>Que tal visualizar seu estoque em 3 dimensões?<br>
+                    É exatamente isso que eu trouxe nesse projeto,<br>
+                    conectado ao banco de dados com uma tabela que acompanha as entradas e saídas dos<br>
+                    produtos no estoque, esse projeto traz em 3D a dispersão dos produtos, <br>
+                    podendo conter dependendo do caso cubagem.<br>
+                    Ainda pode ser adicionado projeto regras de curvas ABC da empresa onde o algoritmo mostra onde os produtos ficariam mais bem posicionados.</p>
+
+
+            </div>   
+
+
+        </div>
+
+        <div class="container-vantagens">
+
+
+
+            <div class="div2">
+
+                <p>Que tal visualizar seu estoque em 3 dimensões?<br>
+                    É exatamente isso que eu trouxe nesse projeto,<br>
+                    conectado ao banco de dados com uma tabela que acompanha as entradas e saídas dos<br>
+                    produtos no estoque, esse projeto traz em 3D a dispersão dos produtos, <br>
+                    podendo conter dependendo do caso cubagem.<br>
+                    Ainda pode ser adicionado projeto regras de curvas ABC da empresa onde o algoritmo mostra onde os produtos ficariam mais bem posicionados.</p>
+
+
+            </div>  
+
+            <div class="div1">
+
+                <img src="./img/home-img.png" alt="">
+
+
+            </div>
+
+
+        </div>
+
+        <div class="container-vantagens">
+
+
+            <div class="div1">
+
+                <img src="./img/iPhone 15.png" alt="">
+
+
+            </div>
+
+            <div class="div2">
+
+                <p>Que tal visualizar seu estoque em 3 dimensões?<br>
+                    É exatamente isso que eu trouxe nesse projeto,<br>
+                    conectado ao banco de dados com uma tabela que acompanha as entradas e saídas dos<br>
+                    produtos no estoque, esse projeto traz em 3D a dispersão dos produtos, <br>
+                    podendo conter dependendo do caso cubagem.<br>
+                    Ainda pode ser adicionado projeto regras de curvas ABC da empresa onde o algoritmo mostra onde os produtos ficariam mais bem posicionados.</p>
+
+
+            </div>  
+
+
+        </div>
+
+        <div class="container-vantagens">
+
+
+
+            <div class="div2">
+
+                <p>Que tal visualizar seu estoque em 3 dimensões?<br>
+                    É exatamente isso que eu trouxe nesse projeto,<br>
+                    conectado ao banco de dados com uma tabela que acompanha as entradas e saídas dos<br>
+                    produtos no estoque, esse projeto traz em 3D a dispersão dos produtos, <br>
+                    podendo conter dependendo do caso cubagem.<br>
+                    Ainda pode ser adicionado projeto regras de curvas ABC da empresa onde o algoritmo mostra onde os produtos ficariam mais bem posicionados.</p>
+
+
+            </div>  
+
+            <div class="div1">
+
+                <img src="./img/project-3.png" alt="">
+
+
+            </div>
+
 
         </div>
 
     </section>
 
 
-    <footer class="footer">
+    <!-- <footer class="footer">
 
         <p>&copy; 2025 Barreto Soluções. Todos os direitos reservados.</p>
 
 
-    </footer>
+    </footer> -->
 
 </body>
 
