--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <section class="container" id="servicos">
 
-        <div class="container2">
+        <div class="sub-container">
 
             <h2><span>Nossos </span>Serviços</h2>
 
@@ -133,7 +133,7 @@
 
         </div>
 
-        <div class="container-vantagens">
+        <!-- <div class="container-vantagens">
 
 
 
@@ -157,9 +157,9 @@
             </div>
 
 
-        </div>
+        </div> -->
 
-        <div class="container-vantagens">
+        <!-- <div class="container-vantagens">
 
 
             <div class="div1">
@@ -182,9 +182,9 @@
             </div>  
 
 
-        </div>
+        </div> -->
 
-        <div class="container-vantagens">
+        <!-- <div class="container-vantagens">
 
 
 
@@ -208,7 +208,7 @@
             </div>
 
 
-        </div>
+        </div> -->
 
     </section>
 
