--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
         <h2 id="vantagens"><span>Nossas </span>Aplicações</h2>
 
+        
         <div class="container-vantagens">
 
             <div class="div1">
@@ -119,6 +120,8 @@
             </div>
 
             <div class="div2">
+
+                <h2 class="projetos-title">Estoque em 3D</h2>
 
                 <p>Que tal visualizar seu estoque em 3 dimensões?<br>
                     É exatamente isso que eu trouxe nesse projeto,<br>
@@ -133,11 +136,13 @@
 
         </div>
 
-        <!-- <div class="container-vantagens">
 
+        <div class="container-vantagens">
 
-
+            
             <div class="div2">
+
+                <h2 class="projetos-title">Gestão Comercial</h2>
 
                 <p>Que tal visualizar seu estoque em 3 dimensões?<br>
                     É exatamente isso que eu trouxe nesse projeto,<br>
@@ -157,9 +162,9 @@
             </div>
 
 
-        </div> -->
+        </div>
 
-        <!-- <div class="container-vantagens">
+        <div class="container-vantagens">
 
 
             <div class="div1">
@@ -170,6 +175,8 @@
             </div>
 
             <div class="div2">
+
+                <h2 class="projetos-title">Gestão Comercial</h2>
 
                 <p>Que tal visualizar seu estoque em 3 dimensões?<br>
                     É exatamente isso que eu trouxe nesse projeto,<br>
@@ -182,7 +189,7 @@
             </div>  
 
 
-        </div> -->
+        </div>
 
         <!-- <div class="container-vantagens">
 
