--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
             <div class="div1">
 
-                <img src="./img/estoque3d.png" alt="">
+                <img src="./img/projeto1.png" alt="" class="img-projeto">
 
 
             </div>
@@ -156,7 +156,7 @@
 
             <div class="div1">
 
-                <img src="./img/home-img.png" alt="">
+                <img src="./img/projeto2.png" alt="" class="img-projeto">
 
 
             </div>
@@ -164,7 +164,7 @@
 
         </div>
 
-        <div class="container-vantagens">
+        <!-- <div class="container-vantagens">
 
 
             <div class="div1">
@@ -189,7 +189,7 @@
             </div>  
 
 
-        </div>
+        </div> -->
 
         <!-- <div class="container-vantagens">
 
