--- a/index.html
+++ b/index.html
@@ -131,8 +131,10 @@
                     Ainda pode ser adicionado projeto regras de curvas ABC da empresa onde o algoritmo mostra onde os produtos ficariam mais bem posicionados.</p>
 
 
-            </div>   
+                <a class="btn-project">Ver Projeto >></a>
 
+            </div>   
+            
 
         </div>
 
