--- a/index.html
+++ b/index.html
@@ -106,132 +106,13 @@
     </section>
 
 
-    <section class="vantagens">
 
-        <h2 id="vantagens"><span>Nossas </span>Aplicações</h2>
-
-
-        <div class="container-vantagens">
-
-            <div class="div1">
-
-                <img src="./img/projeto1.png" alt="" class="img-projeto">
-
-
-            </div>
-
-            <div class="div2">
-
-                <h2 class="projetos-title">Estoque em 3D</h2>
-
-                <p>Que tal visualizar seu estoque em 3 dimensões?<br>
-                    É exatamente isso que eu trouxe nesse projeto,<br>
-                    conectado ao banco de dados com uma tabela que acompanha as entradas e saídas dos<br>
-                    produtos no estoque, esse projeto traz em 3D a dispersão dos produtos, <br>
-                    podendo conter dependendo do caso cubagem.<br>
-                    Ainda pode ser adicionado projeto regras de curvas ABC da empresa onde o algoritmo mostra onde os
-                    produtos ficariam mais bem posicionados.</p>
-
-
-                <button class="btn-project">Ver Projeto >></button>
-
-            </div>
-
-
-        </div>
-
-
-        <div class="container-vantagens">
-
-
-            <div class="div2">
-
-                <h2 class="projetos-title">Gestão Comercial</h2>
-
-                <p>Que tal visualizar seu estoque em 3 dimensões?<br>
-                    É exatamente isso que eu trouxe nesse projeto,<br>
-                    conectado ao banco de dados com uma tabela que acompanha as entradas e saídas dos<br>
-                    produtos no estoque, esse projeto traz em 3D a dispersão dos produtos, <br>
-                    podendo conter dependendo do caso cubagem.<br>
-                    Ainda pode ser adicionado projeto regras de curvas ABC da empresa onde o algoritmo mostra onde os
-                    produtos ficariam mais bem posicionados.</p>
-
-                <button class="btn-project">Ver Projeto >></button>
-
-            </div>
-
-            <div class="div1">
-
-                <img src="./img/projeto2.png" alt="" class="img-projeto">
-
-
-            </div>
-
-
-        </div>
-
-        <!-- <div class="container-vantagens">
-
-
-            <div class="div1">
-
-                <img src="./img/iPhone 15.png" alt="">
-
-
-            </div>
-
-            <div class="div2">
-
-                <h2 class="projetos-title">Gestão Comercial</h2>
-
-                <p>Que tal visualizar seu estoque em 3 dimensões?<br>
-                    É exatamente isso que eu trouxe nesse projeto,<br>
-                    conectado ao banco de dados com uma tabela que acompanha as entradas e saídas dos<br>
-                    produtos no estoque, esse projeto traz em 3D a dispersão dos produtos, <br>
-                    podendo conter dependendo do caso cubagem.<br>
-                    Ainda pode ser adicionado projeto regras de curvas ABC da empresa onde o algoritmo mostra onde os produtos ficariam mais bem posicionados.</p>
-
-
-            </div>  
-
-
-        </div> -->
-
-        <!-- <div class="container-vantagens">
-
-
-
-            <div class="div2">
-
-                <p>Que tal visualizar seu estoque em 3 dimensões?<br>
-                    É exatamente isso que eu trouxe nesse projeto,<br>
-                    conectado ao banco de dados com uma tabela que acompanha as entradas e saídas dos<br>
-                    produtos no estoque, esse projeto traz em 3D a dispersão dos produtos, <br>
-                    podendo conter dependendo do caso cubagem.<br>
-                    Ainda pode ser adicionado projeto regras de curvas ABC da empresa onde o algoritmo mostra onde os produtos ficariam mais bem posicionados.</p>
-
-
-            </div>  
-
-            <div class="div1">
-
-                <img src="./img/project-3.png" alt="">
-
-
-            </div>
-
-
-        </div> -->
-
-    </section>
-
-
-    <!-- <footer class="footer">
+    <footer class="footer">
 
         <p>&copy; 2025 Barreto Soluções. Todos os direitos reservados.</p>
 
 
-    </footer> -->
+    </footer>
 
 </body>
 
